feat: create rent payment api endpoint (#362)
